# weather

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  utils.rs
