[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = ["Duong Ha <duonghb53@gmail>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = [
    "json",
] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
dotenv = "0.15.0"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"
